--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
 }
 /*google font*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+}
 main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Poppins', sans-serif;
+    
 }
 .navigation{
     display:grid;
